Store and restore scroll position when changing thumbnail size

BUG: 267579